    * 4174 FIX: added missing perfometer for interface services

    Multisite:
    * 4169 View action: Default values of sticky, notification and persistent options can now be configured via global settings....
    * 4143 FIX: Fixed possible log spam "MKAuthException: Invalid credentials" in web.log...
    * 4004 FIX: Fixed exception when viewing availability of BI aggregations...

    WATO:
    * 4142 New extended search dialog for rulesets and rules...
    * 4003 FIX: esx_vsphere_objects: fixed check parameters display bug during WATO service discovery

    Notifications:
    * 4197 FIX: Fix sending notification to global fallback email address

    Reporting & Availability:
    * 3652 FIX: Unbreak PDF exports...

    Event Console:
    * 4154 Do not send notifications if host found and currently in downtime...
            NOTE: Please refer to the migration notes!
    * 4155 FIX: Do not perform actions on events if overflow limit is active...
    * 4156 FIX: Fix off-by-one error in EC limit handling...
    * 4199 FIX: Fix detection of replication mode if EC is distributed...
    * 4200 FIX: Fix computation of Event Console performance snapin in distributed mode...


1.4.0i3:
    Core & Setup:
    * 3978 FIX: mkbackup: Fixed backup to some CIFS shares ([Errno 13] Permission denied) '...')...
    * 4078 FIX: Fixed handling of hosts with non resolvable IP addresses during runtime...

    Checks & Agents:
    * 3988 Windows agent: new global option disabled_sections...
    * 3989 Logwatch patterns: now able to change state of context lines...
    * 4087 netgear_fans, netgear_powersupplies, netgear_temp: new checks for Netgear Switches which support the FASTPATH-BOXSERVICES-PRIVATE MIB
    * 4089 oracle_tablespaces: file online states are now configurable if size info is available
    * 4096 avaya_chassis_card, avaya_chassis_ps, avaya_chassis_temp: New checks for Avaya devices...
    * 4094 apc_rackpdu_power: now detects all phases or banks connected to this pdu